Revert compile version back to JDK 11, since we still want to support LTS versions. Added missing CDI implementation